change html file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
+
+    <!-- Header -->
     <header class="h1">
       <img src="./img/prg.jpg" alt="left image" height="50px" width="50px"></img>
       <img src="./img/head.jpg" alt="right"class="head" height="50px" width="50px"></img>
